--- a/src/Components/ModalLoginInForm.css
+++ b/src/Components/ModalLoginInForm.css
@@ -1,3 +1,10 @@
 .ui.fullscreen.basic.modal.transition.visible.active {
    margin-top: 0 !important;
 }
+.loginButton {
+   margin-top: 1% !important;
+   margin-left: 60% !important;
+}
+.exitButton {
+   margin-left: 95% !important;
+}
