add socket and fix bug with sign up, add page new lot

--- a/src/Components/SettingUser.css
+++ b/src/Components/SettingUser.css
@@ -4,7 +4,7 @@
     margin-left: 15% !important;
     margin-top: 2% !important;
 }
-.ui.form {
+.FormImage{
     margin-left: 35% !important;
 }
 .buttonSave {
