add multipart images

--- a/src/Components/SettingUser.css
+++ b/src/Components/SettingUser.css
@@ -1,9 +1,10 @@
-.ui.medium.image {
-    height: 152px !important;
+.avatar {
     width: 152px !important;
     margin-left: 15% !important;
     margin-top: 2% !important;
+    margin-right: 50% !important;
 }
+
 .FormImage{
     margin-left: 35% !important;
 }
