--- a/src/Components/NewLots.css
+++ b/src/Components/NewLots.css
@@ -3,3 +3,8 @@ input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+.imgUrl {
+    display: inline-block !important;
+    margin-left: 2% !important;
+    width: 152px !important;
+}
