--- a/src/Components/NewLots.css
+++ b/src/Components/NewLots.css
@@ -6,5 +6,13 @@ input[type=number]::-webkit-outer-spin-button {
 .imgUrl {
     display: inline-block !important;
     margin-left: 2% !important;
+
     width: 152px !important;
+}
+.formNewLot {
+    width: 30%;
+    margin-left: 35%;
+}
+.buttonCreateLot {
+    width: 100% !important;
 }
