--- a/src/Components/HomePage/ActiveLots.css
+++ b/src/Components/HomePage/ActiveLots.css
@@ -2,3 +2,9 @@
     margin: 0 auto !important;
     width: 90% !important;
 }
+
+.header {
+    cursor: pointer;
+    color: rgb(0, 0, 0);
+    font-weight: 700;
+}
