--- a/src/Components/Lot's/NewLots.css
+++ b/src/Components/Lot's/NewLots.css
@@ -12,5 +12,7 @@ input[type=number]::-webkit-outer-spin-button {
     margin-left: 35%;
 }
 .buttonCreateLot {
-    width: 100% !important;
+    margin-top: 1% !important;
+    margin-left: 35% !important;
+    width: 30% !important;
 }
